[package]
name = "crossterm_utils"
version = "0.3.1"
authors = ["T. Post"]
description = "Common logic used by the crossterm crates."
repository = "https://github.com/crossterm-rs/crossterm-utils"
documentation = "https://docs.rs/crossterm_utils/"
license = "MIT"
keywords = ["terminal", "abstractions", "crossterm", "windows", "screen_buffer"]
exclude = ["target", "Cargo.lock"]
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = { version =  "0.3.8", features = ["wincon"] }
crossterm_winapi = { version = "0.2.1" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.51"
